--- a/advanced_python/introduction_and_tutorials/html_compiled_tutorials/tutorial_2_pandas_intro.html
+++ b/advanced_python/introduction_and_tutorials/html_compiled_tutorials/tutorial_2_pandas_intro.html
@@ -12899,6 +12899,16 @@ Name: 12, dtype: object</pre>
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Explore the multitude of pandas options on the <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html">official pandas page</a>.</p>
+
+</div>
+</div>
+</div>
     </div>
   </div>
 </body>
