updated advanced python notebooks

--- a/advanced_python/introduction_and_tutorials/html_compiled_tutorials/tutorial_3_statistical_models.html
+++ b/advanced_python/introduction_and_tutorials/html_compiled_tutorials/tutorial_3_statistical_models.html
@@ -11793,7 +11793,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Load the data in the file <code>input_files/co2_temp.txt</code> stored in this workshops GitHub folder.</p>
+<p>Load the data in the file <code>input_files/co2_temp.txt</code> stored in this workshops GitHub folder using the pandas library.</p>
 
 </div>
 </div>
